# embview

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: Dependencies.cmake
docs/: Doxyfile
src/: CMakeLists.txt  main.cpp
src/cli/: CliApp.cpp  CliApp.h
src/core/: ConfigManager.cpp  ConfigManager.h  DataStore.cpp  DataStore.h  DeviceManager.cpp  DeviceManager.h  DiagnosticRegistry.cpp  DiagnosticRegistry.h  ExpressionEval.cpp  ExpressionEval.h  FileFactory.cpp  FileFactory.h  IProtocolParser.cpp  IProtocolParser.h  ITransport.h  LogFileManager.cpp  LogFileManager.h  Protocol.cpp  Protocol.h  RawDataBuffer.cpp  RawDataBuffer.h  SerialTransport.cpp  SerialTransport.h  SessionRecorder.cpp  SessionRecorder.h  SocketGuard.h  TcpTransport.cpp  TcpTransport.h  TransportFactory.cpp  TransportFactory.h  TriggerEngine.cpp  TriggerEngine.h  UdpTransport.cpp  UdpTransport.h
src/ui/: AppTheme.cpp  AppTheme.h  Application.cpp  Application.h  CommandPanel.cpp  CommandPanel.h  ConnectionPanel.cpp  ConnectionPanel.h  FftPanel.cpp  FftPanel.h  HexViewPanel.cpp  HexViewPanel.h  LogFilePanel.cpp  LogFilePanel.h  LogPanel.cpp  LogPanel.h  MainWindow.cpp  MainWindow.h  NumberConverterPanel.cpp  NumberConverterPanel.h  PlotPanel.cpp  PlotPanel.h  RecorderPanel.cpp  RecorderPanel.h  StatsPanel.cpp  StatsPanel.h  TriggerPanel.cpp  TriggerPanel.h
tests/: CMakeLists.txt  MockTransport.h  test_DataStore.cpp  test_FileFactory.cpp  test_Protocol.cpp  test_TransportFactory.cpp
